--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 a:hover{
   transform: scale(1.1);
 }
-*{
+*:not(head){
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -284,7 +284,6 @@ img{
 .closeer{
   width: 10vw;
   height: 100vh;
-  padding-top: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
